1.almost complete widget ui display 2.need add ui test

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,19 @@
 
   <com.zac4j.library.CircleProgressBar
       android:id="@id/progress_bar"
-      android:layout_width="32dp"
-      android:layout_height="32dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
       app:fillColor="@color/white"
       app:strokeBgColor="@color/gray_light"
       app:strokeColor="@color/purple"
+      app:size="large"
       app:strokeWidth="4dp"
+      />
+
+  <ProgressBar
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
       />
 
 </RelativeLayout>
