--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <item name="progress_bar" type="id"/>
+  <item name="wave_progressbar" type="id"/>
+  <item name="donut_progressbar" type="id"/>
 </resources>
