--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
   <item name="wave_progressbar" type="id"/>
   <item name="donut_progressbar" type="id"/>
+  <item name="hua_progressbar" type="id"/>
 </resources>
